Add to db tested

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -515,6 +515,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_21972/2955555044.py:5: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "  df = pd.read_csv(\"../data/sample.csv\", sep=\"[,;:]\", index_col=False)\n",
+      "/tmp/ipykernel_21972/2955555044.py:5: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
+      "  df = pd.read_csv(\"../data/sample.csv\", sep=\"[,;:]\", index_col=False)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "engine = create_engine(\"postgresql://postgres:nvskFr7xOO8bndqdqh9W@containers-us-west-30.railway.app:7828/railway\")\n",
+    "# df = pd.read_csv(path, sep=\"[,;:]\", index_col=False)\n",
+    "df = pd.read_csv(\"../data/sample.csv\", sep=\"[,;:]\", index_col=False)\n",
+    "try:\n",
+    "    print(df.shape)\n",
+    "    df.to_sql(\"raw_data\", con=engine, if_exists='replace',index_label='id')\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
