Initial transformation done

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -551,6 +551,255 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../data/raw_dataset.csv\", 'r', encoding='ISO-8859-1') as f:\n",
+    "    lines = f.readlines()\n",
+    "    updated_lines=\"\"\n",
+    "    for index , line in enumerate(lines):\n",
+    "        if(index == 0):\n",
+    "            data = line \n",
+    "        each_line = line.split(';')\n",
+    "        if index != 0:\n",
+    "            new_lines = [l.strip() for l in each_line]\n",
+    "            updated_lines += \";\".join(new_lines[0:10]) + \";\" + \"_\".join(new_lines[10:])+\"\\n\"\n",
+    "        else:\n",
+    "            new_lines = [l.strip() for l in each_line]\n",
+    "            updated_lines += \";\".join(new_lines[:len(new_lines)-1]) + \";\" + \"time\" + \";\" + \"other_data\" + \"\\n\" \n",
+    "with open('../data/transformed_dataset.csv', \"w\") as f:\n",
+    "    f.writelines(updated_lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20, 11)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>traveled_d</th>\n",
+       "      <th>avg_speed</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>lon_acc</th>\n",
+       "      <th>lat_acc</th>\n",
+       "      <th>time</th>\n",
+       "      <th>other_data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Motorcycle</td>\n",
+       "      <td>347.33</td>\n",
+       "      <td>30.349228</td>\n",
+       "      <td>37.983176</td>\n",
+       "      <td>23.730476</td>\n",
+       "      <td>26.3733</td>\n",
+       "      <td>-0.1076</td>\n",
+       "      <td>0.1255</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37.983179_23.730474_26.3674_0.0257_0.1431_0.04...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Motorcycle</td>\n",
+       "      <td>404.89</td>\n",
+       "      <td>28.247962</td>\n",
+       "      <td>37.983147</td>\n",
+       "      <td>23.730449</td>\n",
+       "      <td>18.9960</td>\n",
+       "      <td>-0.0744</td>\n",
+       "      <td>-0.0689</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37.983148_23.730448_18.9919_0.0177_-0.0794_0.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Motorcycle</td>\n",
+       "      <td>405.06</td>\n",
+       "      <td>10.400858</td>\n",
+       "      <td>37.983145</td>\n",
+       "      <td>23.730517</td>\n",
+       "      <td>27.0705</td>\n",
+       "      <td>-0.1024</td>\n",
+       "      <td>0.0406</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37.983147_23.730515_27.0649_0.0244_0.0463_0.04...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Taxi</td>\n",
+       "      <td>28.31</td>\n",
+       "      <td>36.401640</td>\n",
+       "      <td>37.982778</td>\n",
+       "      <td>23.729217</td>\n",
+       "      <td>34.8036</td>\n",
+       "      <td>-0.1908</td>\n",
+       "      <td>-0.0270</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37.982775_23.729219_34.7777_-0.1682_-0.0310_0....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Car</td>\n",
+       "      <td>419.70</td>\n",
+       "      <td>27.979874</td>\n",
+       "      <td>37.983111</td>\n",
+       "      <td>23.730559</td>\n",
+       "      <td>11.1899</td>\n",
+       "      <td>-0.1395</td>\n",
+       "      <td>-0.0570</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37.983112_23.730558_11.1822_0.0333_-0.0641_0.0...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   track_id        type  traveled_d  avg_speed        lat        lon    speed  \\\n",
+       "0         1  Motorcycle      347.33  30.349228  37.983176  23.730476  26.3733   \n",
+       "1         2  Motorcycle      404.89  28.247962  37.983147  23.730449  18.9960   \n",
+       "2         3  Motorcycle      405.06  10.400858  37.983145  23.730517  27.0705   \n",
+       "3         4        Taxi       28.31  36.401640  37.982778  23.729217  34.8036   \n",
+       "4         5         Car      419.70  27.979874  37.983111  23.730559  11.1899   \n",
+       "\n",
+       "   lon_acc  lat_acc  time                                         other_data  \n",
+       "0  -0.1076   0.1255   0.0  37.983179_23.730474_26.3674_0.0257_0.1431_0.04...  \n",
+       "1  -0.0744  -0.0689   0.0  37.983148_23.730448_18.9919_0.0177_-0.0794_0.0...  \n",
+       "2  -0.1024   0.0406   0.0  37.983147_23.730515_27.0649_0.0244_0.0463_0.04...  \n",
+       "3  -0.1908  -0.0270   0.0  37.982775_23.729219_34.7777_-0.1682_-0.0310_0....  \n",
+       "4  -0.1395  -0.0570   0.0  37.983112_23.730558_11.1822_0.0333_-0.0641_0.0...  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"../data/transformed_dataset.csv\", sep=\";\", index_col=False)\n",
+    "df = df[:20]\n",
+    "print(df.shape)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "engine = create_engine(\"postgresql://postgres:nvskFr7xOO8bndqdqh9W@containers-us-west-30.railway.app:7828/railway\")\n",
+    "# df = pd.read_csv(path, sep=\"[,;:]\", index_col=False)\n",
+    "df = pd.read_csv(\"../data/transformed_dataset.csv\", sep=\";\", index_col=False)\n",
+    "try:\n",
+    "    df = df[:20]\n",
+    "    print(df.shape)\n",
+    "    df.to_sql(\"transform_test\", con=engine, if_exists='replace',index_label='id')\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../data/raw_dataset.csv\", 'r', encoding='ISO-8859-1') as f:\n",
+    "    lines = f.readlines()\n",
+    "    updated_lines=\"\"\n",
+    "    for index , line in enumerate(lines):\n",
+    "        if(index == 0):\n",
+    "            data = line \n",
+    "        each_line = line.split(';')\n",
+    "        if index != 0:\n",
+    "            new_lines = [l.strip() for l in each_line]\n",
+    "            updated_lines += \";\".join(new_lines[0:10]) +\"\\n\"\n",
+    "        else:\n",
+    "            new_lines = [l.strip() for l in each_line]\n",
+    "            updated_lines += \";\".join(new_lines[:len(new_lines)-1]) + \";\" + \"time\" + \"\\n\" \n",
+    "with open('../data/transformed_dataset.csv', \"w\") as f:\n",
+    "    f.writelines(updated_lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2765, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "engine = create_engine(\"postgresql://postgres:nvskFr7xOO8bndqdqh9W@containers-us-west-30.railway.app:7828/railway\")\n",
+    "# df = pd.read_csv(path, sep=\"[,;:]\", index_col=False)\n",
+    "df = pd.read_csv(\"../data/transformed_dataset.csv\", sep=\";\", index_col=False)\n",
+    "try:\n",
+    "    # df = df[:10]\n",
+    "    print(df.shape)\n",
+    "    df.to_sql(\"transformed_data_final\", con=engine, if_exists='replace',index_label='id')\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
