Airflow dbt and sample time series

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -800,6 +800,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = ['track_id', 'type', 'lat', 'lng', 'speed', 'lon_acc', 'lat_acc', 'time']\n",
+    "\n",
+    "with open(\"../data/sample.csv\", 'r', encoding='ISO-8859-1') as f:\n",
+    "    lines = f.readlines()\n",
+    "    updated_lines=\"\"\n",
+    "    for index , line in enumerate(lines):\n",
+    "        # if index == 2:\n",
+    "        #     break\n",
+    "        each_line = line.split(';')\n",
+    "        if index != 0:\n",
+    "            new_lines = [l.strip() for l in each_line]\n",
+    "            other_data = new_lines[4:]\n",
+    "            i=0\n",
+    "            while i < len(other_data):\n",
+    "                vals = other_data[i:i+6]\n",
+    "                i+=84\n",
+    "                # if i < 1000:\n",
+    "                if len(vals) != 0:\n",
+    "                    x = [new_lines[0], new_lines[1]]\n",
+    "                    for v in vals:\n",
+    "                        x.append(v)\n",
+    "                    if len(x)==8:\n",
+    "                        updated_lines += \";\".join(x) +\"\\n\"\n",
+    "                else:\n",
+    "                    break\n",
+    "        else:\n",
+    "            new_lines = [l.strip() for l in each_line]\n",
+    "            updated_lines += \";\".join(cols) + \"\\n\" \n",
+    "\n",
+    "with open('../data/time_series_transformed_dataset.csv', \"w\") as f:\n",
+    "    f.writelines(updated_lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4352, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "engine = create_engine(\"postgresql://postgres:nvskFr7xOO8bndqdqh9W@containers-us-west-30.railway.app:7828/railway\")\n",
+    "# df = pd.read_csv(path, sep=\"[,;:]\", index_col=False)\n",
+    "df = pd.read_csv(\"../data/time_series_transformed_dataset.csv\", sep=\";\", index_col=False)\n",
+    "try:\n",
+    "    # df = df[:10]\n",
+    "    print(df.shape)\n",
+    "    df.to_sql(\"sample_time_series\", con=engine, if_exists='replace',index_label='id')\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
